--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vue2"
   ],
   "author": "Moshkin Denis",
+  "license": "MIT",
   "homepage": "https://github.com/VisualYuki/my-mask",
   "repository": {
     "url": "https://github.com/VisualYuki/my-mask",
@@ -20,17 +21,19 @@
   "scripts": {
     "dev": "vite",
     "build": " vite build --config vite.config.build.ts",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "maska": "^2.1.9",
-    "vue": "^3.2.47"
+    "preview": "vite preview",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@types/node": "^20.2.4",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vitest/coverage-c8": "^0.27.3",
+    "maska": "^2.1.9",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
+    "vitest": "^0.27.3",
+    "vue": "^3.3.4",
     "vue-tsc": "^1.4.2"
   }
 }
