--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-maska",
+  "name": "mask",
   "private": false,
   "version": "0.0.1",
   "description": "Simple zero-dependency input mask for Vue 2/3 or Vanilla JS",
@@ -12,18 +12,13 @@
   ],
   "author": "Moshkin Denis",
   "license": "MIT",
-  "homepage": "https://github.com/VisualYuki/my-mask",
-  "repository": {
-    "url": "https://github.com/VisualYuki/my-mask",
-    "type": "git"
-  },
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": " vite build --config vite.config.build.ts",
     "preview": "vite preview",
-    "test": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test": "vitest run --test-timeout",
+    "test:coverage": "vitest run --coverage --test-timeout"
   },
   "devDependencies": {
     "@types/node": "^20.2.4",
@@ -35,5 +30,10 @@
     "vitest": "^0.27.3",
     "vue": "^3.3.4",
     "vue-tsc": "^1.4.2"
+  },
+  "dependencies": {
+    "@testing-library/dom": "^9.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/user-event": "^14.4.3"
   }
 }
